css/css-transitions/pseudo-elements-002.html WPT is a failure https://bugs.webkit.org/show_bug.cgi?id=234987

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Mark WPT progression.

* web-platform-tests/css/css-transitions/pseudo-elements-002-expected.txt:
* web-platform-tests/css/cssom/getComputedStyle-pseudo-expected.txt:

Source/WebCore:

When checking for style validity, we would only check the element itself and not its host
in the case where the element were a PseudoElement. Ideally, we'd eradicate all use of
PseudoElement throughout this source file, but this is a start, and I'll attempt a
refactor in a followup patch.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::hasValidStyleForProperty):


Canonical link: https://commits.webkit.org/245959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287926 268f45cc-cd09-0410-ab3c-d52691b4dbfc